# pydata-li-trafilatura

./: 1.0-daveg-spacy-ner.ipynb  1.0-daveg-trafilatura.ipynb  pyproject.toml
